[project]
name = "rl-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "jpkleal",email = "45352137+jpkleal@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "rl_engine", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
